# Tech-World-Map

./: README.md  index.html  vite.config.ts
api/: internet-silkroads.js
backend/: requirements.txt
backend/app/: main.py
backend/app/services/: attacks.py  cables.py  satellites.py  traffic.py
src/: App.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: DeckGLMap.ts  InsightsPanel.ts  Map.ts  MapContainer.ts  MapPopup.ts  SearchModal.ts  SilkroadsPanel.ts
src/config/: ai-datacenters.ts  ai-regulations.ts  ai-research-labs.ts  feeds.ts  index.ts  intel-labs.ts  panels.ts  strategic-datacenters.ts
src/config/variants/: cyber.ts  tech.ts
src/services/: analysis-worker.ts  cable-activity.ts  clustering.ts  cyber-attacks.ts  data-freshness.ts  flights.ts  focal-point-detector.ts  gdelt-intel.ts  geo-convergence.ts  internet-silkroads.ts  markets.ts  military-flights.ts  military-vessels.ts  ml-capabilities.ts  ml-worker.ts  oil-analytics.ts  parallel-analysis.ts  protests.ts  satellite-tracking.ts  signal-aggregator.ts  summarization.ts  tauri-bridge.ts  temporal-baseline.ts  threat-classifier.ts  ucdp.ts  usa-spending.ts  wingbits.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: circuit-breaker.ts  logger.ts
