[package]
name = "world-viewer"
version = "0.1.0"
description = "World Viewer desktop application"
authors = ["Community"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
